@@ -1,6 +1,8 @@
 # vim: set noexpandtab:
 2013-02-11 Matt
 	* Updated central jet eta cut from 2.5 to 2.4
+	* Fixed bug in initialization of DilTriggerLogic.  Fixes printouts.
+	* Default trigger weight set to Moriond (changed from HCP)
 	
 2013-02-10 Steve
 	* Added tau eff and electron veto SFs and uncerts
